Page Products ready

--- a/pages/products.html
+++ b/pages/products.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>Sobre Nós · Alfa Médico Hospitalar</title>
+    <title>Produtos · Alfa Médico Hospitalar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/base.css" rel="stylesheet">
     <link href="../css/alfa.css" rel="stylesheet">
@@ -26,8 +26,8 @@
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
-            <a class="current" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
-            <a href="pages/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
+            <a class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
@@ -94,12 +94,37 @@
             </div>
           </div>
           <div class="row">
-            <section class="col-xs-12">
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <div class="border-content">
                 <div class="clearfix">
-                  <h1 class="title-front mt-2 mb-3">Conheça a Alfa Médico Hospitalar</h1>
+                  <i class="icon-1 title-icon-front"></i>
+                  <h2 class="title-front">Facilidade & Inovação</h2>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>
+                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
+                </p>
+              </div>
+            </section>
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="border-content">
+                <div class="clearfix">
+                  <i class="icon-2 title-icon-front"></i>
+                  <h2 class="title-front">Experiência de Longo Prazo</h2>
+                </div>
+                <p>
+                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
+                </p>
+              </div>
+            </section>
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="border-content">
+                <div class="clearfix">
+                  <i class="icon-3 title-icon-front"></i>
+                  <h2 class="title-front">Assistência Contínua</h2>
+                </div>
+                <p>
+                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
+                </p>
               </div>
             </section>
           </div>
@@ -107,78 +132,129 @@
       </div>
     </header>
     <main class="container" role="main">
-      <h3 class="heading-1">Nossa equipe</h3>
+    	<h1 class="title-front mb-3">Conheça a nossa linha de produtos</h1>
+      <h3 class="heading-1">Navegue por empresa</h3>
       <section class="row">
         <div class="col-xs-12 col-sm-12 col-md-4">
-          <div class="content-box border-content">
-            <figure class="figure-box">
-              <img src="../images/about-1.jpg" class="img-responsive" alt="Raphaela Aguiar - Presidente"/>
+          <div class="content-box">
+            <figure class="item-thumbs">
+            	<a href="#fakelink" class="hover-wrap" title="Nestlé Health Science">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/corp-1.jpg" class="img-responsive" alt="Nestlé Health Science"/>
             </figure>
-            <h3 class="heading-2 mb-0">Raphaela Aguiar</h3>
-            <h5 class="sub-heading">Presidente</h5>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="content-box border-content">
-            <figure class="figure-box">
-              <img src="../images/about-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
+          <div class="content-box">
+            <figure class="item-thumbs">
+              <a href="#fakelink" class="hover-wrap" title="Baxter">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/corp-2.jpg" class="img-responsive" alt="Baxter"/>
             </figure>
-            <h3 class="heading-2 mb-0">Bruno Fernandes</h3>
-            <h5 class="sub-heading">Gerente Administrativo</h5>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="content-box border-content">
-            <figure class="figure-box">
-              <img src="../images/about-3.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
+          <div class="content-box">
+            <figure class="item-thumbs">
+              <a href="#fakelink" class="hover-wrap" title="Medcorp">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/corp-3.jpg" class="img-responsive" alt="Medcorp"/>
             </figure>
-            <h3 class="heading-2 mb-0">Carlos Zéfiro</h3>
-            <h5 class="sub-heading">Gerente de Vendas</h5>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
+          </div>
+        </div>
+      </section>
+      <h3 class="heading-1">Navegue por segmento</h3>
+      <section class="row">
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="content-box content-padd">
+            <figure class="figure-box item-thumbs">
+            	<a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/prod-4.jpg" class="img-responsive" alt="Nutrição Enteral"/>
+            </figure>
+            <h3 class="heading-2">Nutrição Enteral</h3>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
+            <a href="#fakelink" class="link-full" title="Nutrição Enteral">Visite esse segmento<span class="icon-10"></span></a>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="content-box content-padd">
+            <figure class="figure-box item-thumbs">
+              <a href="#fakelink" class="hover-wrap" title="Fórmula Infantil">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/prod-5.jpg" class="img-responsive" alt="Fórmula Infantil"/>
+            </figure>
+            <h3 class="heading-2">Fórmula Infantil</h3>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
+            <a href="#fakelink" class="link-full" title="Fórmula Infantil">Visite esse segmento<span class="icon-10"></span></a>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="content-box content-padd">
+            <figure class="figure-box item-thumbs">
+              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/prod-6.jpg" class="img-responsive" alt="Nutrição Parenteral"/>
+            </figure>
+            <h3 class="heading-2">Nutrição Parenteral</h3>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
+            <a href="#fakelink" class="link-full" title="Nutrição Parenteral">Visite esse segmento<span class="icon-10"></span></a>
           </div>
         </div>
       </section>
       <section class="row">
-        <h1 class="title-front col-xs-12 mt-2 mb-3">Conheça a Alfa Médico Hospitalar</h1>
-        <div class="col-md-8 content-box">
-          <h3 class="heading-1">Saiba mais sobre nós</h3>
-          <ul class="nav nav-tabs">
-            <li class="active"><a href="#missao" data-toggle="tab">Missão</a></li>
-            <li><a href="#visao" data-toggle="tab">Visão</a></li>
-            <li><a href="#valores" data-toggle="tab">Valores</a></li>
-          </ul>
-          <div class="tab-content">
-            <div class="tab-pane tabs-pane fade in active" id="missao">
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
-              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
-            </div>
-            <div class="tab-pane tabs-pane fade" id="visao">
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
-              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
-            </div>
-            <div class="tab-pane tabs-pane fade" id="valores">
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional.</p>
-              <p>Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</p>
-              <p>Desenvolver as oportunidades de negócios visando atender as necessidades do cliente. Manter a qualidade e a referência no segmento, ressaltando sempre melhoria continua dos processos através da inovação organizacional. Desenvolver as oportunidades de negócios visando atender as necessidades do cliente.</p>
-            </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="content-box content-padd">
+            <figure class="figure-box item-thumbs">
+            	<a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/prod-2.jpg" class="img-responsive" alt="Tecnologia de Infusão"/>
+            </figure>
+            <h3 class="heading-2">Tecnologia de Infusão</h3>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
+            <a href="#fakelink" class="link-full" title="Tecnologia de Infusão">Visite esse segmento<span class="icon-10"></span></a>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-          <div class="content-box">
-            <h3 class="heading-1">Linhas de atuação</h3>
-            <ul class="list-a">
-              <li><span class="icon-6"></span>Nutrição Enteral</li>
-              <li><span class="icon-6"></span>Fórmula Infantil</li>
-              <li><span class="icon-6"></span>Nutrição Parenteral</li>
-              <li><span class="icon-6"></span>Tecnologia de Infusão</li>
-              <li><span class="icon-6"></span>Anestesiologia</li>
-              <li><span class="icon-6"></span>Linha de Cateteres</li>
-              <li><a href="#fakelink" title="Veja toda linha de produtos"><span class="icon-6"></span>Veja toda linha de produtos</a></li>
-            </ul>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="content-box content-padd">
+            <figure class="figure-box item-thumbs">
+              <a href="#fakelink" class="hover-wrap" title="Fórmula Infantil">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/prod-7.jpg" class="img-responsive" alt="Anestesiologia"/>
+            </figure>
+            <h3 class="heading-2">Anestesiologia</h3>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
+            <a href="#fakelink" class="link-full" title="Anestesiologia">Visite esse segmento<span class="icon-10"></span></a>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="content-box content-padd">
+            <figure class="figure-box item-thumbs">
+              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
+              <span class="overlay-img"></span>
+              <span class="overlay-img-ico icon-7"></span>
+              </a>
+              <img src="../images/prod-3.jpg" class="img-responsive" alt="Linha de Cateteres"/>
+            </figure>
+            <h3 class="heading-2">Linha de Cateteres</h3>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
+            <a href="#fakelink" class="link-full" title="Linha de Cateteres">Visite esse segmento<span class="icon-10"></span></a>
           </div>
         </div>
       </section>
