--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,7 @@
             <h1 class="hide">Menu de avegação</h1>
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
             <a class="current" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
-            <a href="pages/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
