Update images products
Update images products, titles and descriptions for all products of homepage. Product page started.

--- a/index.html
+++ b/index.html
@@ -338,57 +338,27 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé Quality Street">
+                    <a href="#fakelink" class="hover-wrap" title="Fibersource® Sistema Fechado">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
-                    <img src="images/prod-1.jpg" alt="Nestlé Quality Street">
+                    <img src="images/prod-1.jpg" alt="Fibersource® Sistema Fechado">
                   </div>
-                  <h4>Nestlé Quality Street</h4>
-                  <p>Souvenaid é um suplemento normocalórico, normoproteico. Enriquecido com elementos nutricionais (Fortasyn Connect) que em conjunto exercem papel fundamental na manutenção da integridade e função das células cerebrais.</p>
+                  <h4>Fibersource® Sistema Fechado</h4>
+                  <p>Alimento nutricionalmente completo para nutrição enteral ou oral, normocalórico<sup>1</sup>.</p>
                 </article>
               </div>
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé Easy Cool">
+                    <a href="#fakelink" class="hover-wrap" title="Isosource® Standard Tetra Square">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
-                    <img src="images/prod-2.jpg" alt="Nestlé Easy Cool">
+                    <img src="images/prod-2.jpg" alt="Isosource® Standard Tetra Square">
                   </div>
-                  <h4>Nestlé Easy Cool</h4>
-                  <p>Nutridrink Compact Protein é um suplemento nutricional oral, nutricionalmente completo, hipercalórico (2,4kcal/ml), hiperproteico (24%VCT) e normolipidico, de baixo volume e alta densidade calórica e proteica. Isento de lactose e glúten.</p>
-                </article>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="row">
-              <div class="col-xs-12 col-sm-6">
-                <article class="border-content">
-                  <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé Rolo Potz">
-                    <span class="overlay-img"></span>
-                    <span class="overlay-img-ico-2 icon-7"></span>
-                    </a>
-                    <img src="images/prod-3.jpg" alt="Nestlé Rolo Potz">
-                  </div>
-                  <h4>Nestlé Rolo Potz</h4>
-                  <p>Biosen Glutamin é um módulo de L-Glutamina para nutrição ENTERAL ou ORAL. É composto com 100% de glutamina, aminõácido não-essencial, representa mais de 60% dos aminoácidos livres disponíveis no músculo</p>
-                </article>
-              </div>
-              <div class="col-xs-12 col-sm-6">
-                <article class="border-content">
-                  <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé Chocapic">
-                    <span class="overlay-img"></span>
-                    <span class="overlay-img-ico-2 icon-7"></span>
-                    </a>
-                    <img src="images/prod-4.jpg" alt="Nestlé Chocapic">
-                  </div>
-                  <h4>Nestlé Chocapic</h4>
-                  <p>Biosen Espessante é um produto feito a partir do amido de milho, que passa por um processo tecnológico, adquirindo assim propriedades de um espessante natural, instantâneo, isento de glúten e lactose, instantâneo, isento de glúten e lactose.</p>
+                  <h4>Isosource® Standard Tetra Square</h4>
+                  <p>Alimento nutricionalmente completo para nutrição enteral ou oral, normocalórico<sup>1</sup>.</p>
                 </article>
               </div>
             </div>
@@ -398,27 +368,27 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé NAN H.A.">
+                    <a href="#fakelink" class="hover-wrap" title="Isosource® 1.5 Cal Tetra Square">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
-                    <img src="images/prod-5.jpg" alt="Nestlé NAN H.A.">
+                    <img src="images/prod-3.jpg" alt="Isosource® 1.5 Cal Tetra Square">
                   </div>
-                  <h4>Nestlé NAN H.A.</h4>
-                  <p>Nan H.A. é uma fórmula infantil hipoalergênica devido à hidrólise parcial das proteínas do soro de leite, por ação da tripsina; é acrescida de óleos vegetais, maltodextrina e enriquecida com vitaminas, minerais, ferro e outros oligoelementos.</p>
+                  <h4>Isosource® 1.5 Cal Tetra Square</h4>
+                  <p>Alimento nutricionalmente completo para nutrição enteral ou oral, hipercalórico<sup>1</sup>.</p>
                 </article>
               </div>
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé 100 Count Bag">
+                    <a href="#fakelink" class="hover-wrap" title="Nutren® Active Banana">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
-                    <img src="images/prod-6.jpg" alt="Nestlé 100 Count Bag">
+                    <img src="images/prod-4.jpg" alt="Nutren® Active Banana">
                   </div>
-                  <h4>Nestlé 100 Count Bag</h4>
-                  <p>Nutridrink pó, agora chama-se Nutridrink Max, com nova embalagem e muito mais completo, fórmula hiperproteica, permite 2 diluições 1.0kcal/ml (normocalórica) e 1.5kcal/ml (Hipercalórica) atendendo as necessidades de vários pacientes.</p>
+                  <h4>Nutren® Active Banana</h4>
+                  <p>Complemento alimentar em pó com 25 vitaminas e minerais.</p>
                 </article>
               </div>
             </div>
@@ -428,14 +398,44 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé Valentine Friends Cookie Package">
+                    <a href="#fakelink" class="hover-wrap" title="Nutren® Active Chocolate">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
-                    <img src="images/prod-7.jpg" alt="Nestlé Valentine Friends Cookie Package">
+                    <img src="images/prod-5.jpg" alt="Nutren® Active Chocolate">
                   </div>
-                  <h4>Nestlé Valentine Friends Cookie Package</h4>
-                  <p>Nutrison Multifiber é uma dieta nutricionalmente completa, normocalórica e adequado teor proteico, enriquecida com mix de carotenóides e mix de fibras 49% fibras solúveis e 51% insolúveis. Hipossódica. Isenta de sacarose, lactose e glúten.</p>
+                  <h4>Nutren® Active Chocolate</h4>
+                  <p>Complemento alimentar em pó com 25 vitaminas e minerais.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="#fakelink" class="hover-wrap" title="Nutren® Senior 200 ml Baunilha">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="images/prod-6.jpg" alt="Nutren® Senior 200 ml Baunilha">
+                  </div>
+                  <h4>Nutren® Senior 200 ml Baunilha</h4>
+                  <p>Alimento para suplementação de nutrição enteral ou oral, hiperproteico1 e hipercalórico<sup>1</sup>.</p>
+                </article>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="#fakelink" class="hover-wrap" title="Resource® Thicken Up Sache">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="images/prod-7.jpg" alt="Resource® Thicken Up Sache">
+                  </div>
+                  <h4>Resource® Thicken Up Sache</h4>
+                  <p>Espessante e gelificante para alimentos. Não altera a cor, sabor e cheiro dos alimentos.</p>
                 </article>
               </div>
               <div class="col-xs-12 col-sm-6">
@@ -448,7 +448,7 @@
                     <img src="images/prod-8.jpg" alt="Nestlé NAN Pro 2">
                   </div>
                   <h4>Nestlé NAN Pro 2</h4>
-                  <p>Nan Comfor 3 é a Fórmula Infantil de transição da Nestlé com prebióticos desenvolvida para lactentes a partir do 10 mês. Único com DHA ARA, Nucleotídeos e um diferenciado mix de gorduras que contribuem para um crescimento mais saudável.</p>
+                  <p>Espessante e gelificante para alimentos. Não altera a cor, sabor e cheiro dos alimentos.</p>
                 </article>
               </div>
             </div>
