--- a/pages/product.html
+++ b/pages/product.html
@@ -100,9 +100,7 @@
                   <i class="icon-1 title-icon-front"></i>
                   <h2 class="title-front">Facilidade & Inovação</h2>
                 </div>
-                <p>
-                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
-                </p>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
               </div>
             </section>
             <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -111,9 +109,7 @@
                   <i class="icon-2 title-icon-front"></i>
                   <h2 class="title-front">Experiência de Longo Prazo</h2>
                 </div>
-                <p>
-                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
-                </p>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
               </div>
             </section>
             <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -122,9 +118,7 @@
                   <i class="icon-3 title-icon-front"></i>
                   <h2 class="title-front">Assistência Contínua</h2>
                 </div>
-                <p>
-                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
-                </p>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
               </div>
             </section>
           </div>
