Page Product ready
New Footer. New list with links.

--- a/pages/about.html
+++ b/pages/about.html
@@ -97,7 +97,7 @@
             <section class="col-xs-12">
               <div class="border-content">
                 <div class="clearfix">
-                  <h1 class="title-front mt-2 mb-3">Conheça a Alfa Médico Hospitalar</h1>
+                  <h1 class="title-front mt-2 mb-3">Nossa história</h1>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
@@ -107,6 +107,7 @@
       </div>
     </header>
     <main class="container" role="main">
+      <h1 class="title-front mb-3">Conheça a Alfa Médico Hospitalar</h1>
       <h3 class="heading-1">Nossa equipe</h3>
       <section class="row">
         <div class="col-xs-12 col-sm-12 col-md-4">
@@ -141,7 +142,6 @@
         </div>
       </section>
       <section class="row">
-        <h1 class="title-front col-xs-12 mt-2 mb-3">Conheça a Alfa Médico Hospitalar</h1>
         <div class="col-md-8 content-box">
           <h3 class="heading-1">Saiba mais sobre nós</h3>
           <ul class="nav nav-tabs">
@@ -171,12 +171,12 @@
           <div class="content-box">
             <h3 class="heading-1">Linhas de atuação</h3>
             <ul class="list-a">
-              <li><span class="icon-6"></span>Nutrição Enteral</li>
-              <li><span class="icon-6"></span>Fórmula Infantil</li>
-              <li><span class="icon-6"></span>Nutrição Parenteral</li>
-              <li><span class="icon-6"></span>Tecnologia de Infusão</li>
-              <li><span class="icon-6"></span>Anestesiologia</li>
-              <li><span class="icon-6"></span>Linha de Cateteres</li>
+              <li><a href="#fakelink" title="Nutrição Enteral"><span class="icon-6"></span>Nutrição Enteral</a></li>
+              <li><a href="#fakelink" title="Fórmula Infantil"><span class="icon-6"></span>Fórmula Infantil</a></li>
+              <li><a href="#fakelink" title="Nutrição Parenteral"><span class="icon-6"></span>Nutrição Parenteral</a></li>
+              <li><a href="#fakelink" title="Tecnologia de Infusão"><span class="icon-6"></span>Tecnologia de Infusão</a></li>
+              <li><a href="#fakelink" title="Anestesiologia"><span class="icon-6"></span>Anestesiologia</a></li>
+              <li><a href="#fakelink" title="Linha de Cateteres"><span class="icon-6"></span>Linha de Cateteres</a></li>
               <li><a href="#fakelink" title="Veja toda linha de produtos"><span class="icon-6"></span>Veja toda linha de produtos</a></li>
             </ul>
           </div>
@@ -186,7 +186,7 @@
     <footer class="container" role="contentinfo">
       <div class="ct-footer">
         <div class="row">
-          <div class="col-md-5 clearfix">
+          <div class="col-md-4 clearfix">
             <div class="box-footer">
               <h2 class="heading-1">Conheça-nos mais</h2>
               <p>Envie uma mensagem ou ligue para esclarecer suas dúvidas, enviar sugestões, conhecer mais sobre nossos produtos e serviços</p>
@@ -204,8 +204,8 @@
               <button type="submit" class="btn btn-footer">Enviar mensagem <span class="icon-9"></span></button>
             </form>
           </div>
-          <div class="col-md-6 col-md-offset-1 pd-0">
-            <div class="col-sm-6 col-md-6 mb-0">
+          <div class="col-md-8 pd-0">
+            <div class="col-sm-7 mb-0">
               <div class="box-footer">
                 <h3 class="heading-1">Endereço</h3>
                 <p>Av. Prefeito Wall Ferraz, N. 15385-B, Quadra 004, Lote 10 - Brasilar, CEP: 64.035-365, Teresina - PI</p>
@@ -225,12 +225,22 @@
                 </nav>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 mb-0">
+            <div class="col-sm-5 mb-0">
+              <div class="box-footer">
+		            <h3 class="heading-1">Nosso catálogo</h3>
+		            <div class="item-thumbs">
+		              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+		              <span class="overlay-img"></span>
+		              <span class="overlay-img-ico icon-4"></span>
+		              </a>
+		              <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
+		            </div>
+		          </div>
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="#fakelink"><span class="icon-10"></span>Produtos</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Downloads</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
                   <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
