--- a/index.html
+++ b/index.html
@@ -148,20 +148,20 @@
             </p>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-md-push-6 col-lg-push-6">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-md-push-6">
           <div class="content-box">
             <h3 class="heading-1">Linhas de atuação</h3>
             <ul class="list-a">
-              <li><span class="icon-6"></span>Nutrição Enteral</li>
-              <li><span class="icon-6"></span>Fórmula Infantil</li>
-              <li><span class="icon-6"></span>Nutrição Parenteral</li>
-              <li><span class="icon-6"></span>Tecnologia de Infusão</li>
-              <li><span class="icon-6"></span>Anestesiologia</li>
-              <li><span class="icon-6"></span>Linha de Cateteres</li>
+              <li><a href="#fakelink" title="Nutrição Enteral"><span class="icon-6"></span>Nutrição Enteral</a></li>
+              <li><a href="#fakelink" title="Fórmula Infantil"><span class="icon-6"></span>Fórmula Infantil</a></li>
+              <li><a href="#fakelink" title="Nutrição Parenteral"><span class="icon-6"></span>Nutrição Parenteral</a></li>
+              <li><a href="#fakelink" title="Tecnologia de Infusão"><span class="icon-6"></span>Tecnologia de Infusão</a></li>
+              <li><a href="#fakelink" title="Anestesiologia"><span class="icon-6"></span>Anestesiologia</a></li>
+              <li><a href="#fakelink" title="Linha de Cateteres"><span class="icon-6"></span>Linha de Cateteres</a></li>
             </ul>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-pull-3 col-lg-pull-3">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-pull-3">
           <div class="content-box">
             <h3 class="heading-1">Empresas que representamos</h3>
             <div class="panel-group" id="accordion">
@@ -338,7 +338,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Fibersource® Sistema Fechado">
+                    <a href="pages/product.html" class="hover-wrap" title="Fibersource® Sistema Fechado">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -351,7 +351,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Isosource® Standard Tetra Square">
+                    <a href="pages/product.html" class="hover-wrap" title="Isosource® Standard Tetra Square">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -368,7 +368,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Isosource® 1.5 Cal Tetra Square">
+                    <a href="pages/product.html" class="hover-wrap" title="Isosource® 1.5 Cal Tetra Square">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -381,7 +381,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nutren® Active Banana">
+                    <a href="pages/product.html" class="hover-wrap" title="Nutren® Active Banana">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -398,7 +398,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nutren® Active Chocolate">
+                    <a href="pages/product.html" class="hover-wrap" title="Nutren® Active Chocolate">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -411,7 +411,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nutren® Senior 200 ml Baunilha">
+                    <a href="pages/product.html" class="hover-wrap" title="Nutren® Senior 200 ml Baunilha">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -428,7 +428,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Resource® Thicken Up Sache">
+                    <a href="pages/product.html" class="hover-wrap" title="Resource® Thicken Up Sache">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -441,7 +441,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Nestlé NAN Pro 2">
+                    <a href="pages/product.html" class="hover-wrap" title="Nestlé NAN Pro 2">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -459,7 +459,7 @@
     <footer class="container" role="contentinfo">
       <div class="ct-footer">
         <div class="row">
-          <div class="col-md-5 clearfix">
+          <div class="col-md-4 clearfix">
             <div class="box-footer">
               <h2 class="heading-1">Conheça-nos mais</h2>
               <p>Envie uma mensagem ou ligue para esclarecer suas dúvidas, enviar sugestões, conhecer mais sobre nossos produtos e serviços</p>
@@ -477,8 +477,8 @@
               <button type="submit" class="btn btn-footer">Enviar mensagem <span class="icon-9"></span></button>
             </form>
           </div>
-          <div class="col-md-6 col-md-offset-1 pd-0">
-            <div class="col-sm-6 col-md-6 mb-0">
+          <div class="col-md-8 pd-0">
+            <div class="col-sm-7 mb-0">
               <div class="box-footer">
                 <h3 class="heading-1">Endereço</h3>
                 <p>Av. Prefeito Wall Ferraz, N. 15385-B, Quadra 004, Lote 10 - Brasilar, CEP: 64.035-365, Teresina - PI</p>
@@ -498,14 +498,24 @@
                 </nav>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 mb-0">
+            <div class="col-sm-5 mb-0">
+              <div class="box-footer">
+		            <h3 class="heading-1">Nosso catálogo</h3>
+		            <div class="item-thumbs">
+		              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+		              <span class="overlay-img"></span>
+		              <span class="overlay-img-ico icon-4"></span>
+		              </a>
+		              <img src="images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
+		            </div>
+		          </div>
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
-                  <a href="#fakelink"> <span class="icon-10"></span> Produtos</a>
-                  <a href="#fakelink"> <span class="icon-10"></span> Downloads</a>
-                  <a href="#fakelink"> <span class="icon-10"></span> Notícias</a>
-                  <a href="#fakelink"> <span class="icon-10"></span> Contato</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Produtos</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
               </div>
             </div>
