--- a/pages/products.html
+++ b/pages/products.html
@@ -94,37 +94,12 @@
             </div>
           </div>
           <div class="row">
-            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+            <section class="col-xs-12">
               <div class="border-content">
                 <div class="clearfix">
-                  <i class="icon-1 title-icon-front"></i>
-                  <h2 class="title-front">Facilidade & Inovação</h2>
+                <h1 class="title-front mb-3">Conheça a nossa linha de produtos</h1>
                 </div>
-                <p>
-                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
-                </p>
-              </div>
-            </section>
-            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-              <div class="border-content">
-                <div class="clearfix">
-                  <i class="icon-2 title-icon-front"></i>
-                  <h2 class="title-front">Experiência de Longo Prazo</h2>
-                </div>
-                <p>
-                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
-                </p>
-              </div>
-            </section>
-            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-              <div class="border-content">
-                <div class="clearfix">
-                  <i class="icon-3 title-icon-front"></i>
-                  <h2 class="title-front">Assistência Contínua</h2>
-                </div>
-                <p>
-                  Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.
-                </p>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
             </section>
           </div>
@@ -132,7 +107,6 @@
       </div>
     </header>
     <main class="container" role="main">
-      <h1 class="title-front mb-3">Conheça a nossa linha de produtos</h1>
       <h3 class="heading-1">Navegue por empresa</h3>
       <section class="row">
         <div class="col-xs-12 col-sm-12 col-md-4">
@@ -262,7 +236,7 @@
     <footer class="container" role="contentinfo">
       <div class="ct-footer">
         <div class="row">
-          <div class="col-md-5 clearfix">
+          <div class="col-md-4 clearfix">
             <div class="box-footer">
               <h2 class="heading-1">Conheça-nos mais</h2>
               <p>Envie uma mensagem ou ligue para esclarecer suas dúvidas, enviar sugestões, conhecer mais sobre nossos produtos e serviços</p>
@@ -280,8 +254,8 @@
               <button type="submit" class="btn btn-footer">Enviar mensagem <span class="icon-9"></span></button>
             </form>
           </div>
-          <div class="col-md-6 col-md-offset-1 pd-0">
-            <div class="col-sm-6 col-md-6 mb-0">
+          <div class="col-md-8 pd-0">
+            <div class="col-sm-7 mb-0">
               <div class="box-footer">
                 <h3 class="heading-1">Endereço</h3>
                 <p>Av. Prefeito Wall Ferraz, N. 15385-B, Quadra 004, Lote 10 - Brasilar, CEP: 64.035-365, Teresina - PI</p>
@@ -301,12 +275,22 @@
                 </nav>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 mb-0">
+            <div class="col-sm-5 mb-0">
+              <div class="box-footer">
+		            <h3 class="heading-1">Nosso catálogo</h3>
+		            <div class="item-thumbs">
+		              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+		              <span class="overlay-img"></span>
+		              <span class="overlay-img-ico icon-4"></span>
+		              </a>
+		              <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
+		            </div>
+		          </div>
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="#fakelink"><span class="icon-10"></span>Produtos</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Downloads</a>
+	                  <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
                   <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
