--- a/about/about.html
+++ b/about/about.html
@@ -27,7 +27,7 @@
             <h1 class="hide">Menu de avegação</h1>
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
             <a class="current" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
-            <a href="products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="../products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
@@ -239,7 +239,7 @@
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
-                  <a href="#fakelink"><span class="icon-10"></span>Produtos</a>
+                  <a href="../products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
                   <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
