--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
             <a class="current" title="Homepage">Home<span class="icon-10"></span></a>
-            <a href="pages/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
-            <a href="pages/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
+            <a href="products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
@@ -338,7 +338,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Fibersource® Sistema Fechado">
+                    <a href="products/product.html" class="hover-wrap" title="Fibersource® Sistema Fechado">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -351,7 +351,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Isosource® Standard Tetra Square">
+                    <a href="products/product.html" class="hover-wrap" title="Isosource® Standard Tetra Square">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -368,7 +368,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Isosource® 1.5 Cal Tetra Square">
+                    <a href="products/product.html" class="hover-wrap" title="Isosource® 1.5 Cal Tetra Square">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -381,7 +381,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Nutren® Active Banana">
+                    <a href="products/product.html" class="hover-wrap" title="Nutren® Active Banana">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -398,7 +398,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Nutren® Active Chocolate">
+                    <a href="products/product.html" class="hover-wrap" title="Nutren® Active Chocolate">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -411,7 +411,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Nutren® Senior 200 ml Baunilha">
+                    <a href="products/product.html" class="hover-wrap" title="Nutren® Senior 200 ml Baunilha">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -428,7 +428,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Resource® Thicken Up Sache">
+                    <a href="products/product.html" class="hover-wrap" title="Resource® Thicken Up Sache">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -441,7 +441,7 @@
               <div class="col-xs-12 col-sm-6">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="pages/product.html" class="hover-wrap" title="Nestlé NAN Pro 2">
+                    <a href="products/product.html" class="hover-wrap" title="Nestlé NAN Pro 2">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico-2 icon-7"></span>
                     </a>
@@ -512,7 +512,7 @@
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
-                  <a href="#fakelink"><span class="icon-10"></span>Produtos</a>
+                  <a href="products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
                   <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
