--- a/products/products.html
+++ b/products/products.html
@@ -26,7 +26,7 @@
           <nav class="main-nav navbar-collapse collapse" role="navigation">
             <h1 class="hide">Menu de avegação</h1>
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
-            <a href="about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
+            <a href="../about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
@@ -289,8 +289,8 @@
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
-                  <a href="#fakelink"><span class="icon-10"></span>Produtos</a>
-	                  <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
+                  <a href="products.html"><span class="icon-10"></span>Produtos</a>
+                  <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
                   <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
